[package]
name = "to"
version = "0.1.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>", "Nick Webster <nick@nick.geek.nz>"]
repository = "https://github.com/reem/rust-to.git"
readme = "README.md"
license = "MIT"
description = "A trait for generalized conversion to a target type."
edition = "2018"
